--- a/HW02_crosses_noughts/HW2_part2.ipynb
+++ b/HW02_crosses_noughts/HW2_part2.ipynb
@@ -278,7 +278,7 @@
     "    def __init__(self, layer_size=512):\n",
     "        super().__init__()\n",
     "        self.Conv1 = nn.Conv2d(in_channels=3, out_channels=layer_size, kernel_size=(3, 3))\n",
-    "        self.FC1 = nn.Linear(layer_size*4, 512)\n",
+    "        self.FC1 = nn.Linear(layer_size, 512)\n",
     "        self.FC2 = nn.Linear(layer_size, 16)       \n",
     "        \n",
     "    def forward(self, x):\n",
@@ -490,7 +490,7 @@
     "crosses_mean_results = []\n",
     "noughts_mean_results = []\n",
     "\n",
-    "for i in qdm(range(learning_episodes)):\n",
+    "for i in tqdm(range(learning_episodes)):\n",
     "    env.run_episode(do_learning=True)\n",
     "    if i % 100 == 0:\n",
     "        crosses = env.playDQN(1,play_episodes)\n",
